// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increase counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should shows component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card Test
  </h1>
</div>
`;
